<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="144dp"
        android:text="@string/gameOver"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="124dp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/saveGame"
        android:layout_width="141dp"
        android:layout_height="48dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="4dp"
        android:text="@string/saveGame"
        app:layout_constraintBottom_toTopOf="@+id/quitGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterTitle" />

    <Button
        android:id="@+id/quitGame"
        android:layout_width="141dp"
        android:layout_height="48dp"
        android:layout_marginStart="135dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="54dp"
        android:text="@string/quitGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveGame" />

    <EditText
        android:id="@+id/enterTitle"
        android:layout_width="227dp"
        android:layout_height="49dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="92dp"
        android:gravity="center"
        android:hint="@string/titlePrompt"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />
</androidx.constraintlayout.widget.ConstraintLayout>